Fix loading compat mod stuff